[package]
name = "sctp-rs"
version = "0.0.1"
edition = "2018"
description = "Pure Rust implementation of RFC-6458 - Sockets API Extension for SCTP."
authors = [ "Abhijit Gadgil <gabhijit@iitbombay.org>"]
categories = ["network-programming"]
keywords = ["sctp"]
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
